--- a/微服务入门.md
+++ b/微服务入门.md
@@ -1,3 +1,6 @@
+
+https://zhuanlan.zhihu.com/p/381847108
+
 ## **B/S+负载均衡**
 
 后面发现把静态文件独立出来，通过CDN等手段进行加速，可以提升应用的整体相应，单体应用的架构就变成：
@@ -27,3 +30,13 @@
 
 应用微服务化之后，首先遇到的第一个问题就是**服务发现问题**，
 一个微服务如何发现其他微服务呢？最简单的方式就是每个微服务里面配置其他微服务的地址，但是当微服务数量众多的时候，这样做明显不现实。所以需要使用到微服务架构中的一个最重要的组件：服务注册中心，所有服务都注册到服务注册中心，同时也可以从服务注册中心获取当前可用的服务清单：
+
+![](v2-11b3e6c534e18ca9fc4013359aa40115_720w.jpg)
+
+
+## **服务注册中心**
+
+解决服务发现问题后，接着需要解决微服务分布式部署带来的第二个问题：服务配置管理的问题。当服务数量超过一定程度之后，如果需要在每个服务里面分别维护每一个服务的配置文件，运维人员估计要哭了。那么，就需要用到微服务架构里面第二个重要的组件：配置中心，微服务架构就变成下面这样了：
+
+
+![](https://pic1.zhimg.com/v2-8da3e725c3b86e5d143cbac7a0a09820_b.jpg)
